feat: Problem 테스트 코드 리팩토링 및 테스트 커버리지 확장