@@ -2,54 +2,17 @@ package com.example.domain.entity;
 
 import static org.assertj.core.api.Assertions.*;
 
-import java.lang.reflect.Constructor;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.test.util.ReflectionTestUtils;
 
 import com.example.domain.enums.AnswerStatus;
-import com.example.domain.enums.AnswerType;
+import com.example.domain.fixture.ProblemFixture;
 
 public class ProblemTest {
-
-	private static Problem problemWithAnswers(AnswerType answerType, String... correctAnswerValues) {
-		Problem problem = instantiate(Problem.class);
-		ReflectionTestUtils.setField(problem, "answerType", answerType);
-
-		List<ProblemAnswer> answers = java.util.Arrays.stream(correctAnswerValues)
-			.map(v -> {
-				ProblemAnswer pa = instantiate(ProblemAnswer.class);
-				ReflectionTestUtils.setField(pa, "answerValue", v);
-				return pa;
-			})
-			.collect(Collectors.toList());
-
-		ReflectionTestUtils.setField(problem, "answers", answers);
-		return problem;
-	}
-
-	private static Problem problemWithId(Long id) {
-		Problem problem = instantiate(Problem.class);
-		ReflectionTestUtils.setField(problem, "id", id);
-		ReflectionTestUtils.setField(problem, "answers", new ArrayList<>());
-		return problem;
-	}
-
-	private static <T> T instantiate(Class<T> clazz) {
-		try {
-			Constructor<T> constructor = clazz.getDeclaredConstructor();
-			constructor.setAccessible(true);
-			return constructor.newInstance();
-		} catch (Exception e) {
-			throw new RuntimeException(e);
-		}
-	}
 
 	@Nested
 	@DisplayName("judge() - 주관식")
@@ -58,36 +21,44 @@ public class ProblemTest {
 		@Test
 		@DisplayName("정답과 일치하면 CORRECT")
 		void correct_when_answer_matches() {
-			Problem problem = problemWithAnswers(AnswerType.SUBJECTIVE, "파리");
-			assertThat(problem.judge(List.of("파리"))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.subjective("파리").judge(List.of("파리"))).isEqualTo(AnswerStatus.CORRECT);
 		}
 
 		@Test
 		@DisplayName("대소문자 무관하게 CORRECT")
 		void correct_case_insensitive() {
-			Problem problem = problemWithAnswers(AnswerType.SUBJECTIVE, "Paris");
-			assertThat(problem.judge(List.of("paris"))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.subjective("Paris").judge(List.of("paris"))).isEqualTo(AnswerStatus.CORRECT);
 		}
 
 		@Test
 		@DisplayName("앞뒤 공백 무관하게 CORRECT")
 		void correct_ignores_whitespace() {
-			Problem problem = problemWithAnswers(AnswerType.SUBJECTIVE, "파리");
-			assertThat(problem.judge(List.of("  파리  "))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.subjective("파리").judge(List.of("  파리  "))).isEqualTo(AnswerStatus.CORRECT);
 		}
 
 		@Test
 		@DisplayName("오답이면 WRONG")
 		void wrong_when_answer_does_not_match() {
-			Problem problem = problemWithAnswers(AnswerType.SUBJECTIVE, "파리");
-			assertThat(problem.judge(List.of("런던"))).isEqualTo(AnswerStatus.WRONG);
+			assertThat(ProblemFixture.subjective("파리").judge(List.of("런던"))).isEqualTo(AnswerStatus.WRONG);
 		}
 
 		@Test
 		@DisplayName("빈 답변이면 WRONG")
 		void wrong_when_user_answer_is_empty() {
-			Problem problem = problemWithAnswers(AnswerType.SUBJECTIVE, "파리");
-			assertThat(problem.judge(List.of())).isEqualTo(AnswerStatus.WRONG);
+			assertThat(ProblemFixture.subjective("파리").judge(List.of())).isEqualTo(AnswerStatus.WRONG);
+		}
+
+		@Test
+		@DisplayName("여러 정답 중 두 번째 정답을 입력해도 CORRECT")
+		void correct_when_second_answer_matches() {
+			assertThat(ProblemFixture.subjective("파리", "프랑스 수도").judge(List.of("프랑스 수도"))).isEqualTo(
+				AnswerStatus.CORRECT);
+		}
+
+		@Test
+		@DisplayName("주관식은 첫 번째 입력값만 검사한다")
+		void only_first_user_answer_is_evaluated() {
+			assertThat(ProblemFixture.subjective("파리").judge(List.of("런던", "파리"))).isEqualTo(AnswerStatus.WRONG);
 		}
 	}
 
@@ -98,36 +69,54 @@ public class ProblemTest {
 		@Test
 		@DisplayName("정답 집합과 정확히 일치하면 CORRECT")
 		void correct_when_exact_match() {
-			Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "1", "3");
-			assertThat(problem.judge(List.of("1", "3"))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.multipleChoice("1", "3").judge(List.of("1", "3"))).isEqualTo(
+				AnswerStatus.CORRECT);
 		}
 
 		@Test
 		@DisplayName("정답 집합과 순서가 달라도 CORRECT")
 		void correct_regardless_of_order() {
-			Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "1", "3");
-			assertThat(problem.judge(List.of("3", "1"))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.multipleChoice("1", "3").judge(List.of("3", "1"))).isEqualTo(
+				AnswerStatus.CORRECT);
 		}
 
 		@Test
 		@DisplayName("정답 중 일부만 맞으면 PARTIAL")
 		void partial_when_some_answers_match() {
-			Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "1", "2", "3");
-			assertThat(problem.judge(List.of("1", "2"))).isEqualTo(AnswerStatus.PARTIAL);
+			assertThat(ProblemFixture.multipleChoice("1", "2", "3").judge(List.of("1", "2"))).isEqualTo(
+				AnswerStatus.PARTIAL);
 		}
 
 		@Test
 		@DisplayName("정답이 하나도 없으면 WRONG")
 		void wrong_when_no_answer_matches() {
-			Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "1", "2");
-			assertThat(problem.judge(List.of("3", "4"))).isEqualTo(AnswerStatus.WRONG);
+			assertThat(ProblemFixture.multipleChoice("1", "2").judge(List.of("3", "4"))).isEqualTo(AnswerStatus.WRONG);
 		}
 
 		@Test
 		@DisplayName("단일 정답 문제에서 일치하면 CORRECT")
 		void correct_single_answer() {
-			Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "2");
-			assertThat(problem.judge(List.of("2"))).isEqualTo(AnswerStatus.CORRECT);
+			assertThat(ProblemFixture.multipleChoice("2").judge(List.of("2"))).isEqualTo(AnswerStatus.CORRECT);
+		}
+
+		@Test
+		@DisplayName("정답 일부와 오답이 섞이면 PARTIAL")
+		void partial_when_correct_and_wrong_answers_mixed() {
+			assertThat(ProblemFixture.multipleChoice("1", "2", "3").judge(List.of("1", "4"))).isEqualTo(
+				AnswerStatus.PARTIAL);
+		}
+
+		@Test
+		@DisplayName("빈 답변이면 WRONG")
+		void wrong_when_answer_is_empty() {
+			assertThat(ProblemFixture.multipleChoice("1", "2").judge(List.of())).isEqualTo(AnswerStatus.WRONG);
+		}
+
+		@Test
+		@DisplayName("정답 전부 + 오답 추가 선택하면 PARTIAL")
+		void partial_when_all_correct_but_extra_wrong_included() {
+			assertThat(ProblemFixture.multipleChoice("1", "2").judge(List.of("1", "2", "3"))).isEqualTo(
+				AnswerStatus.PARTIAL);
 		}
 	}
 
@@ -138,19 +127,20 @@ public class ProblemTest {
 		@Test
 		@DisplayName("풀이 완료한 문제를 제외한다")
 		void excludes_solved_problems() {
-			List<Problem> problems = List.of(problemWithId(1L), problemWithId(2L), problemWithId(3L));
-			Set<Long> solvedIds = Set.of(1L, 2L);
+			List<Problem> problems = List.of(
+				ProblemFixture.withId(1L), ProblemFixture.withId(2L), ProblemFixture.withId(3L));
 
-			List<Problem> result = Problem.filterAvailable(problems, solvedIds, null);
+			List<Problem> result = Problem.filterAvailable(problems, Set.of(1L, 2L), null);
 
 			assertThat(result).hasSize(1);
-			assertThat(result.get(0).getId()).isEqualTo(3L);
+			assertThat(result.getFirst().getId()).isEqualTo(3L);
 		}
 
 		@Test
 		@DisplayName("마지막으로 건너뛴 문제를 제외한다")
 		void excludes_skipped_problem() {
-			List<Problem> problems = List.of(problemWithId(1L), problemWithId(2L), problemWithId(3L));
+			List<Problem> problems = List.of(
+				ProblemFixture.withId(1L), ProblemFixture.withId(2L), ProblemFixture.withId(3L));
 
 			List<Problem> result = Problem.filterAvailable(problems, Set.of(), 2L);
 
@@ -161,18 +151,19 @@ public class ProblemTest {
 		@Test
 		@DisplayName("풀이 완료 + 건너뛰기를 동시에 제외한다")
 		void excludes_both_solved_and_skipped() {
-			List<Problem> problems = List.of(problemWithId(1L), problemWithId(2L), problemWithId(3L));
+			List<Problem> problems = List.of(
+				ProblemFixture.withId(1L), ProblemFixture.withId(2L), ProblemFixture.withId(3L));
 
 			List<Problem> result = Problem.filterAvailable(problems, Set.of(1L), 2L);
 
 			assertThat(result).hasSize(1);
-			assertThat(result.get(0).getId()).isEqualTo(3L);
+			assertThat(result.getFirst().getId()).isEqualTo(3L);
 		}
 
 		@Test
 		@DisplayName("필터 조건이 없으면 전체를 반환한다")
 		void returns_all_when_no_filter() {
-			List<Problem> problems = List.of(problemWithId(1L), problemWithId(2L));
+			List<Problem> problems = List.of(ProblemFixture.withId(1L), ProblemFixture.withId(2L));
 
 			List<Problem> result = Problem.filterAvailable(problems, Set.of(), null);
 
@@ -182,11 +173,23 @@ public class ProblemTest {
 		@Test
 		@DisplayName("모든 문제가 필터되면 빈 리스트를 반환한다")
 		void returns_empty_when_all_filtered() {
-			List<Problem> problems = List.of(problemWithId(1L), problemWithId(2L));
+			List<Problem> problems = List.of(ProblemFixture.withId(1L), ProblemFixture.withId(2L));
 
 			List<Problem> result = Problem.filterAvailable(problems, Set.of(1L, 2L), null);
 
 			assertThat(result).isEmpty();
+		}
+
+		@Test
+		@DisplayName("건너뛴 문제가 이미 풀이 완료된 경우 중복 없이 제외한다")
+		void excludes_skipped_problem_that_is_also_solved() {
+			List<Problem> problems = List.of(
+				ProblemFixture.withId(1L), ProblemFixture.withId(2L), ProblemFixture.withId(3L));
+
+			List<Problem> result = Problem.filterAvailable(problems, Set.of(1L, 2L), 2L);
+
+			assertThat(result).hasSize(1);
+			assertThat(result.getFirst().getId()).isEqualTo(3L);
 		}
 	}
 
@@ -218,15 +221,33 @@ public class ProblemTest {
 		@Test
 		@DisplayName("소수점은 반올림한다")
 		void rounds_decimal() {
-			assertThat(Problem.correctRate(30, 10)).isEqualTo(33);  // 33.33...
-			assertThat(Problem.correctRate(30, 20)).isEqualTo(67);  // 66.66...
+			assertThat(Problem.correctRate(30, 10)).isEqualTo(33);
+			assertThat(Problem.correctRate(30, 20)).isEqualTo(67);
+		}
+
+		@Test
+		@DisplayName("기준 미만이면 전원 정답이어도 null 반환")
+		void returns_null_even_if_all_correct_but_below_threshold() {
+			assertThat(Problem.correctRate(29, 29)).isNull();
+		}
+
+		@Test
+		@DisplayName("정답률이 낮은 경우 반올림해서 반환한다")
+		void rounds_low_correct_rate() {
+			assertThat(Problem.correctRate(30, 1)).isEqualTo(3);
+		}
+
+		@Test
+		@DisplayName("0.5 이상 소수점은 올림한다")
+		void rounds_up_at_half() {
+			assertThat(Problem.correctRate(200, 101)).isEqualTo(51);
 		}
 	}
 
 	@Test
 	@DisplayName("getCorrectAnswerValues()는 정답 값 목록을 반환한다")
 	void getCorrectAnswerValues_returns_answer_values() {
-		Problem problem = problemWithAnswers(AnswerType.MULTIPLE_CHOICE, "1", "3");
-		assertThat(problem.getCorrectAnswerValues()).containsExactlyInAnyOrder("1", "3");
+		assertThat(ProblemFixture.multipleChoice("1", "3").getCorrectAnswerValues())
+			.containsExactlyInAnyOrder("1", "3");
 	}
 }
